[package]
name = "url-collector"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"
env_logger = "0.8.2"
log = "0.4.11"
chrono = "0.4.19"
failure = "0.1.8"
envy = "0.4.2"
