[package]
name = "url-collector"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3.3.2", features = ["openssl"]} # web famework
serde = "1.0.118" # Serialization
serde_derive = "1.0.118" # Automatic serialization traits
serde_json = "1.0.61" # JSON-specific serialization
env_logger = "0.8.2" # Env-based log levels
log = "0.4.11" # Log statements
chrono = "0.4.19" # Date/time manipulation
failure = "0.1.8" # Fancy error handling
envy = "0.4.2" # Env deserialization
dotenv = "0.15.0" # dotenv support
futures-intrusive = "0.4.0" # Semaphore implementation
futures = "0.3.9" # Futures utility methods
diesel = {version = "1.4.5", features = ["postgres"]} # ORM, migrations
